# cs451-assign

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  CmakeLists.txt  README.md
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake-multi-platform.yml
0_setup/: CMakeLists.txt
0_setup/msvc/: build.ps1  testbed.cpp
1_2d_game/: CMakeLists.txt  build.ps1
1_2d_game/msvc/: build.ps1  main.cpp
1_2d_game/src/: collision.hpp  main.cpp  utils.hpp
1_2d_game/tests/: test_collision.cpp
win-x64-msvc/lib/: freeglut.lib
